--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,10 @@
 }
 
 html, body {
-    width: 100vw;
-    height: 100vh;
-    max-width: 100vw;
-    max-height: 100vh;
+    width: 100%;
+    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
     overflow-x: hidden;
 }
 
